<resources>
    <string name="app_name">Animefy</string>
    <string name="gallery_btn">Record a Video</string>
    <string name="animate_btn">Apply the Filter!</string>
    <string name="choose_vid">Choose From Gallery</string>
    <string name="home_menu">Home</string>
    <string name="favorites_menu">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fiter_name_txt">Filter Name</string>
    <string name="filter_anime">Anime</string>
    <string name="filter_comics">Gray</string>
    <string name="filter_dune">Dune</string>
    <string name="filter_poster">Poster</string>
    <string name="filter_S">Manga</string>
    <string name="filter_candy">Candy</string>
    <string name="filter_new">Test</string>
    <string name="app_title">Animefy</string>
    <string name="galleryBtnDescription">Allows users to pick video from their gallery</string>
    <string name="cameraBtnDescription">Allows users to record video</string>
    <string name="revertBtnDescription">Plays the original inputted video</string>
    <string name="saveBtnDescription">Saves the video to Gallery</string>
</resources>